--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -44,8 +44,9 @@
   }
 
   .tehnologije{
-    grid-row: 4/4;
-    grid-column: 2/5;
+    grid-row: 4/5;
+    grid-column: 2/3;
+    
 
     ul{
       height: 10rem;
@@ -54,12 +55,25 @@
       align-items: center;
       font-size: 0.5rem;
       list-style: none;
-      padding: 0;
-      margin-right: 1rem;
+      padding: 5rem;
+      margin-right: 5rem;
       
       li{
         display: block;
-        margin-right: 0.25rem;
+        margin-right: 4rem;
+
+        svg{
+          height: 6rem;
+          width:6rem;
+          fill: #eeffff;
+        }
+
+        svg:hover
+        {
+          
+          fill: #ff4d5a;
+          transition: 0.3s;
+        }
 
       }
       li:last-child{
