--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -379,7 +379,7 @@
     display: grid;
     height: 100vh;
     grid-template-columns: 5% 1fr 1fr 5%;
-    grid-template-rows: 68px min-content min-content min-content min-content min-content;
+    grid-template-rows: 68px min-content min-content min-content min-content min-content 69px;
   
     h2 {
       grid-row: 2/3;
