--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -285,7 +285,7 @@
     min-height: 100vh;
     max-height: fit-content;
     grid-template-columns: 5% 1fr 5%;
-    grid-template-rows: 68px auto 1fr 25%;
+    grid-template-rows: 68px auto 1fr 25% 69px;
 
     h2 {
       grid-column: 2/3;
@@ -366,7 +366,8 @@
 
     .opisi-projektov {
       grid-row: 4 / 4;
-      grid-column: 2/3;
+      grid-column-start: 1;
+      grid-column-end:3;
       align-self: start;
       justify-self: center;
       /*background-color: white;*/
