popravek ikon o nas

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -555,10 +555,16 @@
   }
   .onas .tehnologije ul{
     li{
-      margin-right: 2rem;
+      margin-right: 1.5rem;
       svg{
-        height: 2rem;
-        width: 2rem;
+        height: 2.4rem;
+        width: 2.4rem;
+
+        
+      }
+      #woo{
+        height: 5.5rem;
+        width: 5.5rem;
       }
     }
   }
